# easy_harvest

./: .gitignore  Cargo.toml  README.md  REFACTORING_PROPOSAL.md  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml
assets/: easy_harvest.desktop  icon.icns  tray_32.rgba8  window_64.rgba8
src/: autostart.rs  lib.rs  main.rs  stats.rs  tray.rs
src/app/: billable.rs  entries.rs  mod.rs  project_tracking.rs  settings.rs  stats.rs  subscription.rs  tasks.rs  tests.rs  update.rs  vacation.rs  view.rs  work_day.rs
src/harvest/: client.rs  models.rs
src/state/: bootstrap.rs  cache.rs  favorites.rs  io.rs  mod.rs  overtime_adjustments.rs  persistence.rs  project_budgets.rs  settings.rs  templates.rs  work_day.rs
src/ui/: billable_view.rs  day_view.rs  mod.rs  project_tracking_view.rs  settings_view.rs  stats_view.rs  vacation_view.rs
tests/: harvest_api.rs  routing.rs
