[package]
name = "easy_harvest"
version = "1.1.0"
edition = "2021"

[lib]
name = "easy_harvest"
path = "src/lib.rs"

[[bin]]
name = "easy_harvest"
path = "src/main.rs"

[dependencies]
# Async runtime + HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13", features = ["json", "rustls", "webpki-roots", "query"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# Credentials — no features here; platform stores are enabled below
keyring = "3"

# Directories
dirs = "6"

# UI
iced = { version = "0.14", features = ["tokio", "image", "advanced"] }

# Native file/folder picker dialogs
rfd = "0.17"


[target.'cfg(not(target_os = "macos"))'.dependencies]
tray-icon = { version = "0.22", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
winreg = "0.56"
windows-sys = { version = "0.60", features = ["Win32_UI_WindowsAndMessaging"] }

[package.metadata.bundle]
name = "Easy Harvest"
identifier = "com.easyharvest"
icon = ["assets/logo.png"]
short_description = "Quick Harvest time entry booking from your desktop"
long_description = "Book and review Harvest time entries without opening the web UI."
copyright = "© Easy Harvest contributors"
category = "Productivity"
osx_minimum_system_version = "12.0"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
winresource = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
